Improved ContentType
Refactored and improved interpretation of Content-Type header value.